@@ -20,7 +20,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.pinot.thirdeye</groupId>
   <artifactId>thirdeye</artifactId>
-  <version>1.18.0-SNAPSHOT</version>
+  <version>1.20.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>thirdeye</name>
 
@@ -52,8 +52,7 @@
   </modules>
 
   <properties>
-    <jdk.version>1.8</jdk.version>
-    <javac.version>9+181-r4173-1</javac.version>
+    <jdk.version>11</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!--  Dependency Versions -->
@@ -75,7 +74,6 @@
     <guice.version>4.2.3</guice.version>
     <handlebars.version>4.0.4</handlebars.version>
     <hsqldb.version>2.3.4</hsqldb.version>
-    <httpclient.version>4.5.2</httpclient.version>
     <jackson.version>2.10.2</jackson.version>
     <jetty.version>9.4.21.v20190926</jetty.version>
     <jfreechart.version>1.0.19</jfreechart.version>
@@ -85,7 +83,7 @@
     <mysql.connector.version>5.1.44</mysql.connector.version>
     <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
     <parsii.version>1.5</parsii.version>
-    <pinot.version>0.7.1</pinot.version>
+    <pinot.version>0.9.1</pinot.version>
     <quartz.version>2.2.1</quartz.version>
     <slf4j-api.version>1.7.12</slf4j-api.version>
     <swagger-annotation.version>1.5.22</swagger-annotation.version>
@@ -145,6 +143,14 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+        </configuration>
+      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
@@ -154,8 +160,7 @@
           <version>3.8.0</version>
           <configuration>
             <showWarnings>true</showWarnings>
-            <source>${jdk.version}</source>
-            <target>${jdk.version}</target>
+            <release>${jdk.version}</release>
             <annotationProcessorPaths>
               <path>
                 <groupId>org.mapstruct</groupId>
@@ -197,6 +202,10 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M1</version>
           <configuration>
+            <!-- See https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/ -->
+            <argLine>
+              --illegal-access=permit
+            </argLine>
             <threadCount>1</threadCount>
             <systemPropertyVariables>
               <projectVersion>${project.version}</projectVersion>
@@ -406,6 +415,12 @@
         <artifactId>avro</artifactId>
         <version>${avro.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.9</version>
+      </dependency>
+
       <!-- This helps map pojos from one model to another. API <> DTO, etc -->
       <dependency>
         <groupId>org.mapstruct</groupId>
@@ -770,28 +785,6 @@
   </dependencyManagement>
 
   <profiles>
-    <profile>
-      <id>jdk8</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-              <fork>true</fork>
-              <compilerArgs combine.children="append">
-                <arg>
-                  -J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar
-                </arg>
-              </compilerArgs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
     <profile>
       <id>bigquery</id>
       <properties>
